@@ -139,6 +139,33 @@ static object_t* native_slash(void *baton, object_t* args){
 
   return dfsch_make_number(s); 
 }
+static object_t* native_modulo(void *baton, object_t* args){
+  object_t* i = args;
+  long s;
+  if (!dfsch_object_pair_p(i))
+    DFSCH_THROW("exception:too-few-arguments",i);
+
+  if (dfsch_object_number_p(dfsch_car(i))){
+    if (!dfsch_cdr(i))
+      DFSCH_THROW("exception:too-few-arguments", i);
+    s=(long)dfsch_number(dfsch_car(i));
+  }else{
+    DFSCH_THROW("exception:not-a-number", dfsch_car(i));
+  }
+  i = dfsch_cdr(i);
+  
+  while(dfsch_object_pair_p(i)){
+    if (dfsch_object_number_p(dfsch_car(i))){
+      s%=(long)dfsch_number(dfsch_car(i));
+    }else{
+      DFSCH_THROW("exception:not-a-number", dfsch_car(i));
+      
+    }
+    i = dfsch_cdr(i);
+  }
+
+  return dfsch_make_number(s); 
+}
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -381,6 +408,10 @@ static object_t* native_make_macro(void *baton, object_t* args){
 static object_t* native_eval(void *baton, object_t* args){
   NEED_ARGS(args,2);  
   return dfsch_eval(dfsch_car(args),dfsch_car(dfsch_cdr(args)));
+}
+static object_t* native_eval_proc(void *baton, object_t* args){
+  NEED_ARGS(args,2);  
+  return dfsch_eval_proc(dfsch_car(args),dfsch_car(dfsch_cdr(args)));
 }
 static object_t* native_apply(void *baton, object_t* args){
   NEED_ARGS(args,2);  
@@ -827,6 +858,7 @@ dfsch_object_t* dfsch_native_register(dfsch_ctx_t *ctx){
   dfsch_ctx_define(ctx, "-", dfsch_make_primitive(&native_minus,NULL));
   dfsch_ctx_define(ctx, "*", dfsch_make_primitive(&native_mult,NULL));
   dfsch_ctx_define(ctx, "/", dfsch_make_primitive(&native_slash,NULL));
+  dfsch_ctx_define(ctx, "%", dfsch_make_primitive(&native_modulo,NULL));
   dfsch_ctx_define(ctx, "=", dfsch_make_primitive(&native_eq,NULL));
   dfsch_ctx_define(ctx, "<", dfsch_make_primitive(&native_lt,NULL));
   dfsch_ctx_define(ctx, ">", dfsch_make_primitive(&native_gt,NULL));
@@ -940,6 +972,7 @@ dfsch_object_t* dfsch_native_register(dfsch_ctx_t *ctx){
   dfsch_ctx_define(ctx, "T", dfsch_sym_true());
 
   dfsch_ctx_define(ctx, "eval", dfsch_make_primitive(&native_eval,NULL));
+  dfsch_ctx_define(ctx, "eval-proc", dfsch_make_primitive(&native_eval_proc,NULL));
   dfsch_ctx_define(ctx, "apply", dfsch_make_primitive(&native_apply,NULL));
 
   dfsch_ctx_define(ctx, "make-vector", 
